# FileGenerator

./: .gitignore  LICENCE.txt  README.md  default_templates.toml  pyproject.toml  setup.py
src/GenerateFiles/: GenerateFiles.py  __main__.py
