[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FileGenerator"
version = "0.0.2"
authors = [
    { name="Mohammad Mohsen", email="kuro.ece@gmail.com" },
]
description = "Generate files (text, C, C++, etc) with optional boilerplate, according to a template file"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ece-mohammad/FileGenerator"
"Bug Tracker" = "https://github.com/ece-mohammad/FileGenerator/issues"


[tool.poetry]
name = "FileGenerator"
version = "0.0.2"
description = "Generate files (text, C, C++, etc) with optional boilerplate, according to a template file"
authors = ["Mohammad Mohsen <kuro.ece@gmail.com>"]
readme = "README.md"
packages = [
    {include = ""}
]

[tool.poetry.dependencies]
python = "^3.11"
